k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: teedy
  labels:
    name: teedy
    app: teedy
