k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: teedy-db
  namespace: teedy
  labels:
    app: teedy-db
spec:
  type: ClusterIP
  selector:
    app: teedy-db
  ports:
  - name: postgres
    protocol: TCP
    port: 5432
    targetPort: 5432
