k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: teedy-service
  namespace: teedy
  labels:
    app: teedy
spec:
  type: NodePort
  selector:
    app: teedy
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 30080
